welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:2: error: not found: value reproMotfi
override def run() {reproMotfi()}
                    ^